Update and rename 7_life_logic_note.md to worship_20250731.md

--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: 2025년 7월 31일
-excerpt: 2025.07.31
+excerpt: 2025.07.31 추도예배
 toc: true
 toc_label: "추도 예배 순서"
 toc_icon: "church"
