--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -22,7 +22,7 @@ toc_icon: "church"
 
 - 주기도문
   
-  📖 하늘에 계신 우리 아버지여 <br> 이름이 거룩히 여김을 받으시오며 <br> 나라에 임하옵시며 <br> 뜻이 하늘에서 이룬 것같이 땅에서도 이루어지이다 <br> 오늘날 우리에게 일용힐 양식을 주옵시고 <br> 우리가 우리에게 죄 지은 자를 사하여 준 것같이 <br> 우리 죄를 사하여 주옵시고 <br> 우리를 시험에 들게 하지 마옵시고 <br> 다만 악에서 구하옵소서 <br> 대게 나라와 권세와 영광이 <br> 아버지께 영원히ㅜ있사옵나이다 아멘 <br>
+  📖 하늘에 계신 우리 아버지여 <br> 이름이 거룩히 여김을 받으시오며 <br> 나라에 임하옵시며 <br> 뜻이 하늘에서 이룬 것같이 땅에서도 이루어지이다 <br> 오늘날 우리에게 일용힐 양식을 주옵시고 <br> 우리가 우리에게 죄 지은 자를 사하여 준 것같이 <br> 우리 죄를 사하여 주옵시고 <br> 우리를 시험에 들게 하지 마옵시고 <br> 다만 악에서 구하옵소서 <br> 대게 나라와 권세와 영광이 <br> 아버지께 영원히 있사옵나이다 아멘 <br>
   {: .notice--info}
 
 &emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
