--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -15,7 +15,7 @@ toc_icon: "church"
 <br>
 
 <br><br>
-# 1. 예배의 부름
+# 1. 예배시작
 ## - 묵도
 📖 시편 23:1 <br> 여호와는 나의 목자시니 내게 부족함이 없으리로다  
 {: .notice--warning}
@@ -90,8 +90,7 @@ toc_icon: "church"
 &emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
 
 ## - 추모 찬송
-## - 나 같은 죄인 살리신
-📖 찬송가 <br> 405장(구), 305장(신)
+📖 찬송가 <br> 405장(구), 305장(신) <br> 나 같은 죄인 살리신
 {: .notice--warning}
 
 1절
@@ -122,8 +121,8 @@ toc_icon: "church"
 <br> 
 
 <br><br>
-# 3. 사도신경
-## - ✝️ 예배의 마침
+# 3. 신앙고백
+## - 사도신경
 전능하사 천지를 만드신 <br> 하나님 아버지를 내가 믿사오며 <br> 그 외아들 우리 주 예수 그리스도를 믿사오니 <br> 이는 성령으로 잉태하사 <br> 동정녀 마리아에게 나시고 <br> 본디오 빌라도에게 고난을 받으사 <br> 십자가에 못 박혀 죽으시고 <br> 장사한 지 사흘 만에
 죽은 자 가운데서 다시 살아나시며 <br> 하늘에 오르사 전능하신 하나님 우편에 앉아 계시다가<br> 저리로서 산 자와 죽은 자를 심판하러 오시리라 <br> 성령을 믿사오며, 거룩한 공회와 성도가 서로 교통하는 것과 <br> 죄를 사하여 주시는 것과, 몸이 다시 사는 것과 <br> 영원히 사는 것을 믿사옵나이다. 아멘.
 {: .notice}
