--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -15,8 +15,7 @@ toc_icon: "church"
 <br>
 
 <br><br>
-# 1. 예배시작
-## - 묵도
+# 1. 묵도
 📖 시편 23:1 <br> 여호와는 나의 목자시니 내게 부족함이 없으리로다  
 {: .notice--warning}
 
@@ -28,8 +27,8 @@ toc_icon: "church"
 &emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
 <br> 
 
-## - 찬송
-📖 찬송가 <br> 305장(구), 559장(신) <br> 사철에 봄바람 불어 있고
+# 2. 찬송
+📖 찬송가 <br> 440장(구), 390장(신) <br> 예수가 거느리시니
 {: .notice--warning}
 
 - 1절
