--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -31,6 +31,8 @@ toc_icon: "church"
 📖 찬송가 <br> 440장(구), 390장(신) <br> 예수가 거느리시니
 {: .notice--warning}
 
+![hymn](/assets/images/thechapel_chungdam_map.jpg){: width="100%" height="50%"}{: .center}
+
 - 1절
   ```
   사철에 봄바람 불어잇고 하나님 아버지 모셨으니
