--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -27,6 +27,7 @@ toc_icon: "church"
 &emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
 <br> 
 
+<br><br>
 # 2. 찬송
 📖 찬송가 <br> 440장(구), 390장(신) <br> 예수가 거느리시니
 {: .notice--warning}
@@ -36,7 +37,8 @@ toc_icon: "church"
 &emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
 <br> 
 
-## - 기도
+<br><br>
+# 3. 기도
   
   🙏 “사랑하는 아버지 하나님, 오늘 이 시간 사랑하는 아버지를 추억하며 예배드릴 수 있도록 인도하심에 감사드립니다.
 아버지의 신앙과 삶을 기억하며, 우리 또한 믿음 안에서 살아가길 소망합니다.
@@ -48,10 +50,9 @@ toc_icon: "church"
 <br> 
 
 <br><br>
-# 2. 말씀 묵상
-## - 성경봉독
+# 4. 성경봉독
 📖
-(시편 23편 / 개역개정)
+(전도서 3장 / 개역개정)
 1. 여호와는 나의 목자시니 내게 부족함이 없으리로다
 2. 그가 나를 푸른 풀밭에 누이시며 쉴 만한 물 가로 인도하시는도다
 3. 내 영혼을 소생시키시고 자기 이름을 위하여 의의 길로 인도하시는도다
