--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -34,19 +34,19 @@ toc_icon: "church"
 
 ![hymn](/assets/images/AISelect_20250727_002834_Chrome.jpg){: width="100%" height="50%"}{: .center}
 
-&emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
+<a href="#" class="btn btn--success">Back to top</a>
 <br> 
 
 <br><br>
 # 3. 기도
   
-  🙏 “사랑하는 아버지 하나님, 오늘 이 시간 사랑하는 아버지를 추억하며 예배드릴 수 있도록 인도하심에 감사드립니다.
+🙏 “사랑하는 아버지 하나님, 오늘 이 시간 사랑하는 아버지를 추억하며 예배드릴 수 있도록 인도하심에 감사드립니다.
 아버지의 신앙과 삶을 기억하며, 우리 또한 믿음 안에서 살아가길 소망합니다.
 예배의 모든 순서를 주님께 맡기며, 주님의 위로가 우리 가족 가운데 함께 하길 기도합니다.
 예수님의 이름으로 기도드립니다. 아멘.”
-  {: .notice--info}
+{: .notice--info}
 
-&emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
+<a href="#" class="btn btn--success">Back to top</a>
 <br> 
 
 <br><br>
@@ -61,46 +61,19 @@ toc_icon: "church"
 6. 내 평생에 선하심과 인자하심이 반드시 나를 따르리니 내가 여호와의 집에 영원히 살리로다
 {: .notice--info}
 
-## - 추모사
-- 이인영 집사님의 신앙, 따듯했던 기억
-> “아버지는 평생 가족을 위해 헌신하셨고, 신실한 믿음의 본을 보이셨습니다...”
-
-&emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
-
-## - 추모 찬송
-📖 찬송가 <br> 405장(구), 305장(신) <br> 나 같은 죄인 살리신
-{: .notice--warning}
-
-1절
-> 나 같은 죄인 살리신
-주 은혜 놀라워
-잃었던 생명 찾았고
-광명을 얻었네
-
-2절
-> 큰 죄악에서 건지신
-주 은혜 고마워
-나 처음 믿은 그 시간
-귀하고 귀하다
-
-3절
-> 이제껏 내가 산 것도
-주님의 은혜라
-또 나를 장차 본향에
-인도해 주시리
-
-4절
-> 거기서 우리 영원히
-주님의 은혜로
-해처럼 밝게 살면서
-주 찬양하리라
-
 <a href="#" class="btn btn--success">Back to top</a>
 <br> 
 
 <br><br>
-# 3. 신앙고백
-## - 사도신경
+# 5. 추모
+- 이인영 집사님의 신앙, 따듯했던 기억
+> “아버지는 평생 가족을 위해 헌신하셨고, 신실한 믿음의 본을 보이셨습니다...”
+
+&emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
+<br>
+
+<br><br>
+# 6. 신앙고백
 전능하사 천지를 만드신 <br> 하나님 아버지를 내가 믿사오며 <br> 그 외아들 우리 주 예수 그리스도를 믿사오니 <br> 이는 성령으로 잉태하사 <br> 동정녀 마리아에게 나시고 <br> 본디오 빌라도에게 고난을 받으사 <br> 십자가에 못 박혀 죽으시고 <br> 장사한 지 사흘 만에
 죽은 자 가운데서 다시 살아나시며 <br> 하늘에 오르사 전능하신 하나님 우편에 앉아 계시다가<br> 저리로서 산 자와 죽은 자를 심판하러 오시리라 <br> 성령을 믿사오며, 거룩한 공회와 성도가 서로 교통하는 것과 <br> 죄를 사하여 주시는 것과, 몸이 다시 사는 것과 <br> 영원히 사는 것을 믿사옵나이다. 아멘.
 {: .notice}
