--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -29,8 +29,6 @@ toc_icon: "church"
 
 <br><br>
 # 2. 찬송
-📖 찬송가 <br> 440장(구), 390장(신) <br> 예수가 거느리시니
-{: .notice--warning}
 
 ![hymn](/assets/images/AISelect_20250727_002834_Chrome.jpg){: width="100%" height="50%"}{: .center}
 
@@ -68,6 +66,7 @@ toc_icon: "church"
 # 5. 추모
 - 이인영 집사님의 신앙, 따듯했던 기억
 > “아버지는 평생 가족을 위해 헌신하셨고, 신실한 믿음의 본을 보이셨습니다...”
+  {: .notice--caution}
 
 &emsp;&emsp;<a href="#" class="btn btn--success">Back to top</a>
 <br>
