--- a/_notes/worship_20250731.md
+++ b/_notes/worship_20250731.md
@@ -64,8 +64,8 @@ toc_icon: "church"
 
 <br><br>
 # 5. 추모
-- 이인영 집사님의 신앙, 따듯했던 기억
-  {: .notice--caution}
+이인영 집사님의 신앙, 따듯했던 기억
+{: .notice--caution}
   
 > “아버지는 평생 가족을 위해 헌신하셨고, 신실한 믿음의 본을 보이셨습니다...”
 
