--- a/_notes/7_worship_20250731.md
+++ b/_notes/7_worship_20250731.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 title: Worship
-excerpt: Pray for Grandfather
+excerpt: 7th Note - Pray for Grandfather
 toc: true
 toc_label: "추도 예배 순서"
 toc_icon: "church"
