--- a/_notes/7_worship_20250731.md
+++ b/_notes/7_worship_20250731.md
@@ -6,7 +6,7 @@ toc: true
 toc_label: "추도 예배 순서"
 toc_icon: "church"
 # sidebar:
-  # title: "노트 더보기"
+  # title: "More Notes"
   # nav: sidebar-notes
 ---
 
