--- a/_notes/7_worship_20250731.md
+++ b/_notes/7_worship_20250731.md
@@ -64,7 +64,7 @@ toc_icon: "church"
 
 <br><br>
 # 5. 추모
-이인영 집사님의 신앙, 따듯했던 기억
+집사님의 신앙, 따듯했던 기억
 {: .notice--danger}
   
 > “아버지는 평생 가족을 위해 헌신하셨고, 신실한 믿음의 본을 보이셨습니다...”
