Update and rename 2025-08-11-new.md to 2025-08-11-news.md

--- a/_news/2025/2025-08/2025-08-11-news.md
+++ b/_news/2025/2025-08/2025-08-11-news.md
@@ -12,7 +12,7 @@ sidebar:
 
 📮 25년 8월 11일 월요일 간추린 아침뉴스입니다.
 
-## 김건희
+## 구속영장
 
 ■김건희 특검이 첫 조사 후 곧바로 김건희 여사에 대한 구속영장을 청구하며 승부수를 띄웠습니다. 내일(12일) 열릴 영장 심사 결과가 수사 향방을 가를 중대 분수령이 될 전망입니다.
 
